<resources>
    <string name="app_name">WeiBo</string>
    <string name="login_info">"@首次登录:输入账号后直接注册"</string>
    <string name="hello_world">Hello World</string>
    <string name="preference_file_key">com.example.abcdialogue.module.PREFERENCE_FILE_KEY</string>
    <string name="load_moreing">Loading......</string>
    <string name="load_more_fail">加载失败，请检查网络后重试</string>
    <string name="load_more_end">你已经划到底啦～</string>
    <string name="sp_access_token">com.example.abcdialogue.weibo.PREFERENCE_FILE_KEY</string>
    <string name="oh_captain_my_captain">Need A Yeah</string>
    <string name="iDontKnow">不知道啊</string>
    <string name="from_source">来自</string>
    <string name="weibo">微博</string>
    <string name="serverForget">server忘发了</string>
    <string name="label">username</string>
    <string name="label2">password</string>
    <string name="tab_1">tab1</string>
    <string name="tab_2">tab2</string>
    <string name="tab_3">tab3</string>
    <string name="c_13_5g">9月13日，国新办举行新发送短时间内都v年第四批标点符号旁边vi符合v北方的v离开对方v地方和v部分v加快地方v包括v你；发布vv分局北方vi不分v北方话就饿vbiefvjbefbviuef闻发布会，工业和信息化部部长肖亚庆介绍“推进制造强国网络强国建设 助力全面建成小康社会”有关情况，工信部有关负责人就5G发展形势如何，怎样推进新能源车发展，能否解决汽车“缺芯”问题，屏蔽网址链接整治情况如何等热点问题一一回应。</string>


</resources>