<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000"
    android:layout_marginTop="5dp"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/load_more"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/load_more_ing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible">

                <ProgressBar
                    android:id="@+id/load_pb"
                    android:layout_marginLeft="10dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <TextView
                    android:id="@+id/load_tv"
                    android:layout_width="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/load_moreing"
                    android:textSize="16dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/load_more_fail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/load_more_fail"
                android:textSize="16dp"
                android:visibility="gone"
                tools:visibility="visible"/>
            <TextView
                android:id="@+id/no_more"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/load_more_end"
                android:textSize="16dp"
                android:visibility="gone"
                tools:visibility="visible"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>